fixed overflow

--- a/style.css
+++ b/style.css
@@ -9,17 +9,20 @@
 }
 
 body {
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(145deg, #12e4eb, #f51d15);
+    overflow: scroll;
 } 
 
 .container {
     width: 40%;
     min-width: 450px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
+    scroll-behavior: smooth;
+    display: flexbox;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
     padding: 30px 40px;
 }
 
